samples/_failures_safe/1761491649_4ed4c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c415a0a0.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_c415a0a0.c:141:11: error: expected ‘;’ at end of input
  141 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_c415a0a0.c:141:5: error: expected declaration or statement at end of input
  141 |     printf
      |     ^~~~~~
